Fix layout on mobile/small devices
Fix mod settings layout for small devices. Also a few fixes for Android.

--- a/Chromium/css/styles.css
+++ b/Chromium/css/styles.css
@@ -89,92 +89,6 @@ sl-account-modal .content,
     position: relative;
 }
 
-#nickname-wrapper>div,
-#username-wrapper>div {
-    display: flex;
-    margin-bottom: 10px;
-    gap: 15px;
-}
-
-#nickname-wrapper>div input,
-#username-wrapper>div input {
-    flex-grow: 1;
-}
-
-#nickname-wrapper>div>input:first-of-type,
-#username-wrapper>div>input:first-of-type {
-    width: 42%;
-}
-
-#nickname-wrapper>div>input:nth-child(2) {
-    width: 24%;
-}
-
-#mod-setting-panel {
-    position: absolute;
-    background: var(--bg-elevated-none);
-    top: 2px;
-    left: 0;
-    width: 100%;
-    height: fit-content;
-    padding: 0 30px;
-    box-sizing: border-box;
-    z-index: 100;
-}
-
-@media (max-width:550px) {
-    .mod-slider {
-        width: 100%;
-    }
-
-    #mod-setting-panel h3,
-    #mod-setting-panel div {
-        clear: both;
-    }
-
-    .mod-range-preview {
-        right: 15px;
-    }
-
-    input[type="range"] {
-        width: calc(100% - 50px) !important;
-    }
-
-    .mod-slider p:last-of-type {
-        height: 7px;
-        transform: translateY(-72px);
-        float: right;
-        margin: 0 !important;
-    }
-
-    .mod-slider input[type="range"] {
-        width: 100% !important;
-    }
-
-    #mod-grade-calculate input {
-        width: calc(100% - 30px) !important;
-        margin-bottom: 10px;
-    }
-
-    #nickname-wrapper input,
-    #username-wrapper input {
-        width: 100% !important;
-    }
-
-    #nickname-wrapper div,
-    #username-wrapper div {
-        flex-wrap: wrap;
-    }
-
-    .layout-container {
-        width: calc(50% - 16px) !important;
-    }
-}
-
-#grade-reveal-select {
-    margin-bottom: 20px;
-}
-
 #studiewijzer-afspraak-toevoegen-select {
     margin-top: 20px;
 }
@@ -638,4 +552,9 @@ sl-rooster-week-header .mod-add-homework {
 #mod-contributors a:hover {
     background: var(--bg-elevated-strong);
     cursor: pointer;
+}
+
+.blok>.container>svg {
+    width: 100%;
+    height: 100%;
 }
